crates/math-core/tests/snapshots/conversion_test__subscript_equal_equal.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x_==4
---
<math>
    <msub>
        <mi>x</mi>
        <mo lspace="0" rspace="0">=</mo>
    </msub>
    <mo>=</mo>
    <mn>4</mn>
</math>
