crates/math-core/tests/snapshots/conversion_test__subscript_relation.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "g_{1=1}"
---
<math>
    <msub>
        <mi>g</mi>
        <mrow>
            <mn>1</mn>
            <mo lspace="0" rspace="0">=</mo>
            <mn>1</mn>
        </mrow>
    </msub>
</math>
