crates/math-core/tests/snapshots/conversion_test__sum_log.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sum\\log n"
---
<math>
    <mo lspace="0">∑</mo>
    <mrow>
        <mrow><mspace/><mi>log</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>n</mi>
    </mrow>
</math>
