crates/math-core/tests/snapshots/conversion_test__sum_pointless_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sum\\limits n"
---
<math>
    <mo lspace="0">∑</mo>
    <mi>n</mi>
</math>
