crates/math-core/tests/snapshots/conversion_test__sum_with_displaylimits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sum\\displaylimits_0^1"
---
<math>
    <munderover>
        <mo lspace="0" rspace="0">∑</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
</math>
